--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,15 +2,23 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # runs daily at midnight
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - uses: Platane/snk@v3
         with:
           github_user_name: Malavika-Gupta
           outputs: |
-            ./output/github-contribution-grid-snake.svg
+            ./github-contribution-grid-snake.svg
+
+      - name: Commit and push
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add .
+          git commit -m "Generate contribution snake"
+          git push origin HEAD:main
