--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,17 +8,25 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: Platane/snk@v3
+      # ✅ Checkout your repository FIRST
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # ✅ Generate the snake SVG
+      - name: Generate the Snake Animation
+        uses: Platane/snk@v3
         with:
           github_user_name: Malavika-Gupta
           outputs: |
             ./github-contribution-grid-snake.svg
 
-      - name: Commit and push
+      # ✅ Commit & push back to main
+      - name: Commit and Push
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git add .
-          git commit -m "Generate contribution snake"
+          git add github-contribution-grid-snake.svg
+          git commit -m "Generate contribution snake" || echo "No changes to commit"
           git push origin HEAD:main
